Tjm 98 get movies by top rated (#72)
* feat: add get movies by top rated controller

* feat: added swagger

* chore: removed console.log
