# controllers/movie.js
@@ -3,12 +3,14 @@ const {
   formatMovieData,
   formatMovieDetailData,
   formatMovieCastandCrew,
+  formatTopRatedMovie,
 } = require('../utils/formatMovieData');
 const {
   getMoviesByTag,
   searchMovieByName,
   getMovieById,
   getCastByMovieId,
+  getMoviesByTopRated,
 } = require('../api/axios');
 
 const listMoviesByTag = async (req, res) => {
@@ -55,4 +57,19 @@ const getMovieDetails = async (req, res) => {
   }
 };
 
-module.exports = { listMoviesByTag, searchMovieName, getMovieDetails };
+const getTopRatedMovies = async (req, res) => {
+  try {
+    const data = await getMoviesByTopRated();
+    const filteredData = data.results.filter((item) => item.original_language === 'en');
+    const processedResults = [];
+    for (let i = 0; i <= 5; i += 1) {
+      processedResults.push(formatTopRatedMovie(filteredData[i]));
+    }
+
+    return res.status(StatusCodes.OK).json(processedResults);
+  } catch (err) {
+    return res.json(err);
+  }
+};
+
+module.exports = { listMoviesByTag, searchMovieName, getMovieDetails, getTopRatedMovies };
